# ECGMonitoringSystem

./: .env.example  .gitignore  README.md  docker-compose.yml  initial.sql
client/: package.json
client/public/: index.html
client/src/: App.js  index.js
client/src/api/: axiosInst.js  queries.js
client/src/components/: Loader.js
client/src/components/ButtonSwitch/: index.js
client/src/components/Footer/: index.js
client/src/components/Forms/AddPatientForm/: index.js  validation.js
client/src/components/Forms/ChangePasswordForm/: index.js  validation.js
client/src/components/Forms/LoginForm/: index.js  validation.js
client/src/components/Forms/UpdateUserAccountForm/: index.js
client/src/components/Frame/: index.js
client/src/components/Modals/: ChangePasswordModal.js  LoginModal.js
client/src/components/NavBar/: index.js
client/src/constants/: routes.js
client/src/hocs/: hocs.js
client/src/pages/AddPatient/: index.js
client/src/pages/Home/: index.js
client/src/pages/PatientECG/: index.js
client/src/pages/Patients/: index.js
client/src/pages/Profile/: index.js
client/src/utils/: index.js
server/: Dockerfile  alembic.ini  database.py  main.py  models.py  pyproject.toml  schema.py  utils.py
server/alembic/: env.py
server/alembic/versions/: 288792c3db5a_migration.py  6212e3f7087d_migration.py  7957bca4cbe7_migration.py  9907ae8f6ba3_migration.py  f9c53a1d3623_initial_migration.py
